# xpath-helper

./: .buildinfo  .gitignore  README.html  README.md  browser-console.html  genindex.html  index.html  jest.config.json  objects.inv  original.ts  package-lock.json  package.json  py-modindex.html  search.html  searchindex.js  test.js  tsconfig-base.json  tsconfig.json  tslint.json  xpath-axes.html
.doctrees/: README.doctree  browser-console.doctree  environment.pickle  index.doctree  xpath-axes.doctree
.doctrees/javascript/: api.doctree  index.doctree
.doctrees/python/: api.doctree  index.doctree
.github/workflows/: coverage.yml  documentation.yml  javascript-ci.yml  publish.yml  python-ci.yml
_sources/: README.md.txt  xpath-axes.md.txt
_sources/javascript/: index.md.txt
_sources/python/: index.md.txt
_static/: alabaster.css  custom.css
docs/: README.md  browser-console.md  build.py  conf.py  index.md  index.rst  javascript.rst  python.rst  xpath-axes.md
docs/_images/: xpath-axes.drawio  xpath-explanation.drawio
docs/_static/: custom.css
docs/_templates/: about.html
docs/docs/: index.html  modules.html
docs/docs/assets/: search.js
docs/docs/classes/: filter.FilledFilter.html  filter.Filter.html  xpath_helper.XPathHelper.html
docs/docs/interfaces/: filter.IFilter.html
docs/docs/modules/: filter.html  xpath_helper.html
docs/javascript/: api.md
docs/python/: api.md
javascript/: api.html  index.html
javascript/xpath-helper/: LICENSE  README.md  jest.config.json  package-lock.json  package.json  tsconfig-base.json
javascript/xpath-helper/src/: filter.ts  xpath-helper.ts
javascript/xpath-helper/test/: elaborated-cases.test.ts  filter.test.ts  index.html  xpath-helper.test.ts
python/: api.html  index.html
python/xpath-helper/: .gitignore  README.md  pyproject.toml
python/xpath-helper/tests/: conftest.py  test_elaborated_cases.py  test_filter.py  test_xpath_helper.py
python/xpath-helper/xpath_helper/: __init__.py  filter.py  xpath_helper.py
src/: filter.ts  index.ts
test/: elaborated-cases.test.ts  filter.test.ts  index.html  index.spec.ts  xpath-helper.test.ts
